RESOLVED FIXED212823
Unused parameter warnings in EventRegion.cpp and RenderLayerBacking.cpp
https://bugs.webkit.org/show_bug.cgi?id=212823
Summary Unused parameter warnings in EventRegion.cpp and RenderLayerBacking.cpp
Michael Catanzaro
Reported 2020-06-05 08:23:10 PDT
[1339/1877] Building CXX object Source/WebCore/CMakeFiles...es/WebCore/unified-sources/UnifiedSource-043dd90b-2.cpp.o In file included from DerivedSources/WebCore/unified-sources/UnifiedSource-043dd90b-2.cpp:3: /home/mcatanzaro/Projects/WebKit/Source/WebCore/rendering/EventRegion.cpp: In member function ‘void WebCore::EventRegion::unite(const WebCore::Region&, const WebCore::RenderStyle&, bool)’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/rendering/EventRegion.cpp:120:66: warning: unused parameter ‘style’ [-Wunused-parameter] 120 | void EventRegion::unite(const Region& region, const RenderStyle& style, bool overrideUserModifyIsEditable) | ~~~~~~~~~~~~~~~~~~~^~~~~ [1392/1877] Building CXX object Source/WebCore/CMakeFiles...es/WebCore/unified-sources/UnifiedSource-043dd90b-9.cpp.o In file included from DerivedSources/WebCore/unified-sources/UnifiedSource-043dd90b-9.cpp:2: /home/mcatanzaro/Projects/WebKit/Source/WebCore/rendering/RenderLayerBacking.cpp: In member function ‘void WebCore::RenderLayerBacking::paintDebugOverlays(const WebCore::GraphicsLayer*, WebCore::GraphicsContext&)’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/rendering/RenderLayerBacking.cpp:3203:10: warning: unused variable ‘visibleDebugOverlayRegions’ [-Wunused-variable] 3203 | auto visibleDebugOverlayRegions = renderer().settings().visibleDebugOverlayRegions(); | ^~~~~~~~~~~~~~~~~~~~~~~~~~ /home/mcatanzaro/Projects/WebKit/Source/WebCore/rendering/RenderLayerBacking.cpp: At global scope: /home/mcatanzaro/Projects/WebKit/Source/WebCore/rendering/RenderLayerBacking.cpp:3094:24: warning: ‘WTF::RefPtr<WebCore::Pattern> WebCore::patternForDescription(WebCore::PatternDescription, WebCore::FloatSize, WebCore::GraphicsContext&)’ defined but not used [-Wunused-function] 3094 | static RefPtr<Pattern> patternForDescription(PatternDescription description, FloatSize contentOffset, GraphicsContext& destContext) | ^~~~~~~~~~~~~~~~~~~~~
Attachments
Patch for landing (2.75 KB, patch)
2020-06-05 08:23 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2020-06-05 08:23:52 PDT
Created attachment 401156 [details] Patch for landing
EWS
Comment 2 2020-06-05 09:10:24 PDT
Committed r262623: <https://trac.webkit.org/changeset/262623> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401156 [details].
Radar WebKit Bug Importer
Comment 3 2020-06-05 09:25:14 PDT
Radar WebKit Bug Importer
Comment 4 2020-06-05 09:25:14 PDT
Note You need to log in before you can comment on or make changes to this bug.