Unreviewed, fix unused parameter warnings in EventRegion.cpp and RenderLayerBacking.cpp https://bugs.webkit.org/show_bug.cgi?id=212823

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-06-05

* rendering/EventRegion.cpp:
(WebCore::EventRegion::unite):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::paintDebugOverlays):

Canonical link: https://commits.webkit.org/225629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262623 268f45cc-cd09-0410-ab3c-d52691b4dbfc